--- a/.github/workflows/firefox2.yml
+++ b/.github/workflows/firefox2.yml
@@ -121,52 +121,109 @@ jobs:
 
       - name: Launch Firefox & Tunnel
         run: |
+          # 1. 安装 Playwright Python 库 (但不运行 install firefox)
           pip3 install playwright playwright-stealth
-          playwright install-deps firefox
 
-          cat <<EOF > /home/appuser/run_firefox.sh
+          # 2. 编写 Python 启动脚本
+          #    该脚本将接管 Firefox 的启动，替代原有的 `nohup firefox ...`
+          cat <<EOF > /home/appuser/start_firefox.py
+          import asyncio
+          import os
+          from playwright.async_api import async_playwright
+          from playwright_stealth import stealth_async
+
+          # 指定之前步骤创建的配置目录
+          PROFILE_DIR = "/home/appuser/.mozilla/firefox/stealth.default"
+          # 指定系统安装的 Firefox 路径
+          EXECUTABLE_PATH = "/usr/bin/firefox"
+
+          async def run():
+              async with async_playwright() as p:
+                  print(f"🚀 Launching System Firefox from: {EXECUTABLE_PATH}")
+                  print(f"📂 Loading Profile from: {PROFILE_DIR}")
+
+                  # 启动持久化上下文
+                  # ignore_default_args: 防止 Playwright 添加默认的自动化标志
+                  context = await p.firefox.launch_persistent_context(
+                      user_data_dir=PROFILE_DIR,
+                      executable_path=EXECUTABLE_PATH,
+                      headless=False,  # 必须为 False 才能在 VNC 看到
+                      viewport={"width": 1440, "height": 900},
+                      args=[
+                          "--no-remote", # 保证独立实例
+                          "--kiosk",     # 可选：全屏，如果不喜欢可删掉
+                      ],
+                      # 尽管 user.js 已经配置，这里再次强制覆盖关键反爬参数
+                      # 以防止 Playwright 启动参数冲掉 user.js 的设置
+                      user_prefs={
+                          "dom.webdriver.enabled": False,
+                          "use_automation_extension": False,
+                      }
+                  )
+
+                  page = context.pages[0] if context.pages else await context.new_page()
+
+                  # 3. 加载 Playwright Stealth (抹除 JS 运行时特征)
+                  await stealth_async(page)
+
+                  # 4. 访问目标
+                  target_url = "https://decrypt.day/app/id1489932710"
+                  print(f"🔗 Navigating to: {target_url}")
+                  
+                  try:
+                      await page.goto(target_url, timeout=90000, wait_until="domcontentloaded")
+                      print("✅ Page loaded successfully.")
+                  except Exception as e:
+                      print(f"⚠️ Navigation warning: {e}")
+
+                  # 5. 挂起脚本
+                  # 只要这个 Python 脚本不结束，Firefox 就会一直开着
+                  # 你可以通过 VNC 进来操作，或者后续增加自动化点击代码
+                  print("⏸️  Firefox is running. Waiting for manual interaction...")
+                  while True:
+                      await asyncio.sleep(5)
+
+          if __name__ == "__main__":
+              asyncio.run(run())
+          EOF
+
+          # 3. 赋予执行权限并后台运行
+          cat <<EOF > /home/appuser/run_py_firefox.sh
           #!/bin/bash
           export DISPLAY=:99
           export HOME=/home/appuser
-          # 启动 Firefox
-          nohup firefox --no-remote --new-instance "https://decrypt.day/app/id1489932710" > /home/appuser/firefox.log 2>&1 &
+          
+          # 运行 Python 脚本并将日志输出，方便调试
+          nohup python3 /home/appuser/start_firefox.py > /home/appuser/firefox_automation.log 2>&1 &
           EOF
+
+          chmod +x /home/appuser/run_py_firefox.sh
+          su appuser -c "/home/appuser/run_py_firefox.sh"
           
-          chmod +x /home/appuser/run_firefox.sh
-          su appuser -c "/home/appuser/run_firefox.sh"
+          echo "Firefox launching via Playwright..."
+          sleep 10
           
-          echo "Firefox launching..."
-          sleep 5
-          
-          # 使用 Cloudflare Tunnel 暴露 6080 端口
+          # --- 以下是 Cloudflare Tunnel 部分 (保持不变) ---
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
           
           echo "Waiting for Tunnel..."
           for i in $(seq 1 10); do
-            TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
-
-            if [ -n "$TUNNEL_URL" ]; then
-                echo "Found Tunnel URL: $TUNNEL_URL"
-                echo "Pass"
+            TUNNEL_URL=\$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+            if [ -n "\$TUNNEL_URL" ]; then
+                echo "Found Tunnel URL: \$TUNNEL_URL"
                 break
             fi
-
-            echo "Attempt $i: Tunnel not ready yet, retrying..."
-            
-            if [ "$i" -eq 10 ]; then
-                echo "Error: Failed to find Tunnel URL after 10 seconds."
-                exit 1
-            fi
-
             sleep 1
           done
-                    
+          
           echo "=========================================================="
-          echo "🖥️  XFCE Desktop Ready!"
-          echo "🔗  VNC Link: $TUNNEL_URL/vnc.html?autoconnect=true"
+          echo "🖥️  XFCE Desktop Ready (System Firefox + Playwright)!"
+          echo "🔗  VNC Link: \$TUNNEL_URL/vnc.html?autoconnect=true"
           echo "=========================================================="
+
+          tail -f /home/appuser/firefox_automation.log
 
       # 5. 监控下载 (保持不变)
       - name: Monitor Download (Wait for IPA)
