--- a/.github/workflows/firefox2.yml
+++ b/.github/workflows/firefox2.yml
@@ -127,60 +127,54 @@ jobs:
           # 2. 编写 Python 启动脚本
           # 使用 'EOF' 防止 shell 尝试解析 Python 代码内部的字符
           cat <<'EOF' > /home/appuser/start_firefox.py
-          import asyncio
-          import os
-          from playwright.async_api import async_playwright
-          from playwright_stealth import stealth_async
+          from playwright.sync_api import sync_playwright
+          from playwright_stealth import stealth_sync
 
-          # 指定之前步骤创建的配置目录
+          # 配置路径（完全复用你的环境）
           PROFILE_DIR = "/home/appuser/.mozilla/firefox/stealth.default"
-          # 指定系统安装的 Firefox 路径
           EXECUTABLE_PATH = "/usr/bin/firefox"
+          TARGET_URL = "https://decrypt.day/app/id1489932710"
 
-          async def run():
-              async with async_playwright() as p:
-                  print(f"🚀 Launching System Firefox from: {EXECUTABLE_PATH}")
+          def run():
+              with sync_playwright() as p:
+                  print(f"🚀 Launching System Firefox (Sync) from: {EXECUTABLE_PATH}")
                   print(f"📂 Loading Profile from: {PROFILE_DIR}")
 
-                  # 启动持久化上下文
-                  context = await p.firefox.launch_persistent_context(
+                  # 启动持久化上下文 (Persistent Context)
+                  context = p.firefox.launch_persistent_context(
                       user_data_dir=PROFILE_DIR,
                       executable_path=EXECUTABLE_PATH,
-                      headless=False,  # 必须为 False 才能在 VNC 看到
+                      headless=False,  # 必须为 False 才能在 VNC 显示
                       viewport={"width": 1440, "height": 900},
-                      args=[
-                          "--no-remote", 
-                          "--kiosk",
-                      ],
-                      # 强制覆盖关键反爬参数
+                      args=["--no-remote", "--kiosk"], # 启动参数
+                      # 强制覆盖反爬参数
                       user_prefs={
                           "dom.webdriver.enabled": False,
                           "use_automation_extension": False,
                       }
                   )
 
-                  page = context.pages[0] if context.pages else await context.new_page()
+                  # 获取页面
+                  page = context.pages[0] if context.pages else context.new_page()
 
-                  # 加载 Playwright Stealth
-                  await stealth_async(page)
+                  # 应用 Stealth (同步版)
+                  stealth_sync(page)
 
                   # 访问目标
-                  target_url = "https://decrypt.day/app/id1489932710"
-                  print(f"🔗 Navigating to: {target_url}")
-                  
+                  print(f"🔗 Navigating to: {TARGET_URL}")
                   try:
-                      await page.goto(target_url, timeout=90000, wait_until="domcontentloaded")
+                      page.goto(TARGET_URL, timeout=90000, wait_until="domcontentloaded")
                       print("✅ Page loaded successfully.")
                   except Exception as e:
                       print(f"⚠️ Navigation warning: {e}")
 
-                  # 挂起脚本
+                  # 挂起脚本，保持浏览器开启
                   print("⏸️  Firefox is running. Waiting for manual interaction...")
                   while True:
-                      await asyncio.sleep(5)
+                      time.sleep(5)
 
           if __name__ == "__main__":
-              asyncio.run(run())
+              run()
           EOF
 
           # 3. 赋予执行权限并后台运行
