--- a/.github/workflows/firefox2.yml
+++ b/.github/workflows/firefox2.yml
@@ -122,59 +122,65 @@ jobs:
       - name: Launch Firefox & Tunnel
         run: |
           # 1. 安装 Playwright Python 库
-          pip3 install playwright playwright-stealth
+          pip3 install playwright tf-playwright-stealth
 
           # 2. 编写 Python 启动脚本
           # 使用 'EOF' 防止 shell 尝试解析 Python 代码内部的字符
           cat <<'EOF' > /home/appuser/start_firefox.py
-          from playwright.sync_api import sync_playwright
-          from playwright_stealth import stealth_sync
+          import asyncio
+          import os
+          from playwright.async_api import async_playwright
+          from playwright_stealth import stealth_async
 
-          # 配置路径（完全复用你的环境）
+          # 指定之前步骤创建的配置目录
           PROFILE_DIR = "/home/appuser/.mozilla/firefox/stealth.default"
+          # 指定系统安装的 Firefox 路径
           EXECUTABLE_PATH = "/usr/bin/firefox"
-          TARGET_URL = "https://decrypt.day/app/id1489932710"
 
-          def run():
-              with sync_playwright() as p:
-                  print(f"🚀 Launching System Firefox (Sync) from: {EXECUTABLE_PATH}")
+          async def run():
+              async with async_playwright() as p:
+                  print(f"🚀 Launching System Firefox from: {EXECUTABLE_PATH}")
                   print(f"📂 Loading Profile from: {PROFILE_DIR}")
 
-                  # 启动持久化上下文 (Persistent Context)
-                  context = p.firefox.launch_persistent_context(
+                  # 启动持久化上下文
+                  context = await p.firefox.launch_persistent_context(
                       user_data_dir=PROFILE_DIR,
                       executable_path=EXECUTABLE_PATH,
-                      headless=False,  # 必须为 False 才能在 VNC 显示
+                      headless=False,  # 必须为 False 才能在 VNC 看到
                       viewport={"width": 1440, "height": 900},
-                      args=["--no-remote", "--kiosk"], # 启动参数
-                      # 强制覆盖反爬参数
+                      args=[
+                          "--no-remote", 
+                          "--kiosk",
+                      ],
+                      # 强制覆盖关键反爬参数
                       user_prefs={
                           "dom.webdriver.enabled": False,
                           "use_automation_extension": False,
                       }
                   )
 
-                  # 获取页面
-                  page = context.pages[0] if context.pages else context.new_page()
+                  page = context.pages[0] if context.pages else await context.new_page()
 
-                  # 应用 Stealth (同步版)
-                  stealth_sync(page)
+                  # 加载 Playwright Stealth
+                  await stealth_async(page)
 
                   # 访问目标
-                  print(f"🔗 Navigating to: {TARGET_URL}")
+                  target_url = "https://decrypt.day/app/id1489932710"
+                  print(f"🔗 Navigating to: {target_url}")
+                  
                   try:
-                      page.goto(TARGET_URL, timeout=90000, wait_until="domcontentloaded")
+                      await page.goto(target_url, timeout=90000, wait_until="domcontentloaded")
                       print("✅ Page loaded successfully.")
                   except Exception as e:
                       print(f"⚠️ Navigation warning: {e}")
 
-                  # 挂起脚本，保持浏览器开启
+                  # 挂起脚本
                   print("⏸️  Firefox is running. Waiting for manual interaction...")
                   while True:
-                      time.sleep(5)
+                      await asyncio.sleep(5)
 
           if __name__ == "__main__":
-              run()
+              asyncio.run(run())
           EOF
 
           # 3. 赋予执行权限并后台运行
