--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -169,7 +169,7 @@ jobs:
           export DISPLAY=:99
           # 无需运行 playwright install，直接跑脚本
           su appuser -c "python3 /home/appuser/bot.py > /home/appuser/chrome.log 2>&1 &" 
-          tail -f chrome.log
+          tail -f /home/appuser/chrome.log
 
       # 6. 上传截图和下载文件
       - name: Upload Artifacts
