--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -19,26 +19,77 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          # 安装基础工具 + Python3
-          apt-get install -y wget curl git net-tools sudo vim unzip xz-utils \
-                             python3 python3-pip xvfb x11vnc \
-                             libgbm1 libnss3 libasound2 libatk-bridge2.0-0 libgtk-3-0
+          # 安装基础工具
+          apt-get install -y wget curl git net-tools sudo vim unzip xz-utils libgbm1 libnss3 libasound2
           
-          # === 核心：安装系统级 Google Chrome ===
+          # === 核心修改：安装 Google Chrome ===
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          # 使用 apt install ./file.deb 可以自动解决依赖
           apt-get install -y ./google-chrome-stable_current_amd64.deb
           rm google-chrome-stable_current_amd64.deb
           
-          # === 仅安装 Python 库，不运行 playwright install ===
-          pip3 install playwright tf-playwright-stealth
+          # 安装字体 (防止乱码)
+          apt-get install -y fonts-liberation fonts-noto-color-emoji fontconfig ttf-mscorefonts-installer
           
-          # 安装 XFCE4 (VNC桌面)
-          apt-get install -y dbus-x11 xfce4 xfce4-goodies xfce4-terminal
+          # === 安装 XFCE4 桌面环境 ===
+          apt-get install -y xvfb x11vnc python3 pulseaudio dbus-x11 xfce4 xfce4-goodies xfce4-terminal
           
-          # 准备用户目录
+          # 同意微软字体协议
+          echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections
+          fc-cache -f -v
+          
+          # 安装 noVNC
+          git clone https://github.com/novnc/noVNC.git /opt/noVNC
+          git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
+          ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
+          chmod -R 777 /opt/noVNC
+          
+        # 2. 创建用户 & 配置 Chrome 反爬策略
+      - name: Setup User & Chrome Preferences
+        run: |
           useradd -m -s /bin/bash appuser
           echo "appuser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+          
+          # 创建目录
           su appuser -c "mkdir -p /home/appuser/Downloads"
+          su appuser -c "mkdir -p /home/appuser/Desktop"
+          
+          # === Chrome 核心配置 ===
+          # 创建 Chrome 默认配置目录
+          CONFIG_DIR="/home/appuser/.config/google-chrome/Default"
+          su appuser -c "mkdir -p $CONFIG_DIR"
+          
+          # 写入 Preferences 文件 (JSON格式)
+          # 1. 设置下载目录并禁止弹窗
+          # 2. 禁用凭证服务
+          # 3. 允许弹出窗口 (防止下载被拦截)
+          su appuser -c "cat <<EOF > $CONFIG_DIR/Preferences
+          {
+            \"download\": {
+              \"default_directory\": \"/home/appuser/Downloads\",
+              \"prompt_for_download\": false,
+              \"directory_upgrade\": true
+            },
+            \"savefile\": {
+              \"default_directory\": \"/home/appuser/Downloads\"
+            },
+            \"profile\": {
+              \"default_content_settings\": {
+                \"popups\": 1,
+                \"notifications\": 1
+              },
+              \"content_settings\": {
+                \"exceptions\": {
+                  \"automatic_downloads\": {
+                    \"https://decrypt.day,*\": { \"setting\": 1 }
+                  }
+                }
+              }
+            },
+            \"credentials_enable_service\": false,
+            \"password_manager_enabled\": false
+          }
+          EOF"
 
       # 3. 启动 XFCE 桌面
       - name: Start XFCE Desktop
